Updated for transfer to Surface

--- a/htm/equipment_connection.htm
+++ b/htm/equipment_connection.htm
@@ -35,7 +35,7 @@
     <td>Brown</td>
     <td>12V DC + (30 Watts)</td>
     </tr>
-  </table><br>
+  </table><br />
 
 <p>The PAM board uses the row of pins under the PinIN set for the connection to serial devices. The following steps will successfully connect your device:</p>
 
@@ -78,12 +78,12 @@
   <tr>
     <td>7</td>
     <td>Grey</td>
-    <td>RS-485- OR RS-232 RX</td>
+    <td>RS-485-</td>
     </tr>
   <tr>
     <td>8</td>
     <td>Blue</td>
-    <td>RS-485+ OR RS-232 TX</td>
+    <td>RS-485+</td>
     </tr>
   <tr>
     <td>9</td>
@@ -92,7 +92,7 @@
     </tr>
   </table>
 
-<p>Connect the 9-pin whip to the ROV, and isolate the orange, red, gray, blue, and brown wires. Place the board with the pinOut side facing upwards. In this position, the pin numbers for the PAM board start at 1 in the upper right and increase towards the left. The diagram above also shows the function of each pin on the board in a color coded fashion. From this position begin soldering the wires in the following manner:</p>
+<p>Connect the 9-pin whip to the ROV, and isolate the orange, red, gray, blue, and brown wires. Place the board with the pinOUT side facing upwards. In this position, the pin numbers for the PAM board start at 1 in the upper right and increase towards the left. The diagram above also shows the function of each pin on the board in a color coded fashion. From this position begin soldering the wires in the following manner:</p>
 
 <ul>
   <li>Connect the Orange ground wire to pin 5.</li>
@@ -105,7 +105,7 @@
 <p>This is the typical attachment. For functions of the other wires of the whip, please see this manuals <a href="../../pam/html/equipment_whip.html">
 section on the 9-pin whip.</a></p>
 
-<p><img src="../../required/images/icon_note.gif"> You should only connect the accessories positive (+) power lead to either pin 3 or pin 9, but not both.</p>
+<p><img src="../../required/images/icon_note.png"> You should only connect the accessories positive (+) power lead to either pin 3 or pin 9, but not both.</p>
 
 <h2>Potting</h2>
 
