--- a/htm/equipment_whip.htm
+++ b/htm/equipment_whip.htm
@@ -56,7 +56,7 @@ on the front and back of the accessory port connector, and terminates in an indi
     <td>9</td>
     <td>12V DC + (30 Watts)</td>
     </tr>
- </table><br>
+ </table><br />
 
 <p>The connections are explained in more detail in the following sections.  The PAM will typically be connected to the whip and the either encased in a water tight container or potted in epoxy to make it water and pressure tolerant.</p>
 
