--- a/htm/qs_components.htm
+++ b/htm/qs_components.htm
@@ -4,7 +4,7 @@
 9 pin connector.
 The board has a pin out and pin in side.  The PINOut side attaches to wiring from the 9-pin whip. The PINIn side attaches to wiring from the serial
 device being attached to the ROV.</p>
-<img src = "../../PAM/images/9_pin_whip.png" width = "400"> <br>
+<img src = "../../PAM/images/9_pin_whip.png" width = "400"> <br />
 In the above picture we see the necessary wires from the 9-pin whip. The wires transmit the following:
 <ul>
 	<li>Orange - Ground Wire</li>
