--- a/htm/qs_dive.htm
+++ b/htm/qs_dive.htm
@@ -4,5 +4,5 @@ diagnostics window. This is available by clicking the <b>Maintenance and Diagnos
 button on the launch bar and then pressing the <b>show communications diagnostic
 window</b> button on the Service Bay screen.</p>
 <p align = "center"><img src = "../../PAM/images/con_diag.png" name = "view" width = "550" height = "400">
-<p>Each PAM in the system will have its own pane. Pressing the <!--v--><a name = "terminal" onmouseover = "view.src=term.src" onmouseout = "reset()"><!--/v-->Show Terminal<!--v--><img src ="../../required/images/icon_hand.gif"></a><!--/v-->
+<p>Each PAM in the system will have its own pane. Pressing the <!--v--><a name = "terminal" onmouseover = "view.src=term.src" onmouseout = "reset()"><!--/v-->Show Terminal<!--v--><img src ="../../required/images/icon_hand.png"></a><!--/v-->
 button on the individual pane will allow the actual data traffic to be monitored.</p>
