--- a/htm/qs_postdive.htm
+++ b/htm/qs_postdive.htm
@@ -5,6 +5,6 @@ the Power switch. Make sure the ROV is secure before disconnecting the tether. A
 <p>Your PAM device should be removed in the reverse order it was attached in. After ensuring the VideoRay has been properly disconnected and all power is off, disconnect the device from the PAM, first removing the power, communications, and then ground.
 Once the device is properly disconnect, disconnect the PAM from the VideoRay by disconnecting the power first, then the communications, then the ground. With everything disconnected, ensure that all equipment is properly stored.</p>
 
-<p><img src ="../../PAM/images/icon_note.gif"> Keeping the ROV clean is one of the most important aspects of good preventative maintenance practices, 
+<p><img src ="../../PAM/images/icon_note.png"> Keeping the ROV clean is one of the most important aspects of good preventative maintenance practices, 
 especially after using it in salt water. If you use your ROV in salt water, or water with contaminants, you should first rinse it, and then soak it in clean fresh water for at least one-half hour. 
 After cleaning the ROV and tether, they should be allowed to air dry before being put away for storage.</p>
