--- a/htm/qs_predive.htm
+++ b/htm/qs_predive.htm
@@ -13,8 +13,8 @@ manner:
 	<li>Connect the Blue RS485+ wire to pin 8.</li>
 	<li>Connect the Brown 12V power wire to pin 9.</li>
 </ul>
-<p>When you have finished connecting the cables to the board, it should look very much like the picture.<br>
-<img src="../../PAM/images/icon_note.gif">	If you are using 24V power you should have one extra wire connected to the board. It should be connected to pin 3.</p>
+<p>When you have finished connecting the cables to the board, it should look very much like the picture.<br />
+<img src="../../PAM/images/icon_note.png">	If you are using 24V power you should have one extra wire connected to the board. It should be connected to pin 3.</p>
 	
 <h2>Device Connection</h2>
 <img src ="../../PAM/images/board2.png" width = "400">
