--- a/htm/software_cockpit.htm
+++ b/htm/software_cockpit.htm
@@ -4,7 +4,7 @@
 
 <p>The accessory device configuration file informs VideoRay Cockpit how to address the PAM (node id) as well as other parameters. If the accessory device configuration file is not installed VideoRay Cockpit will not communicate with the PAM.</p>
 
-<p><img src ="../../required/images/icon_note.gif"> Accessory device files can be created using the vrDeviceConfiguration tool. However, a factory configured file is typically provided with the PAM enabled accessory purchased from VideoRay.</p>
+<p><img src ="../../required/images/icon_note.png"> Accessory device files can be created using the vrDeviceConfiguration tool. However, a factory configured file is typically provided with the PAM enabled accessory purchased from VideoRay.</p>
 
 <p>PAM accessory Device configuration files provided must be installed into the <span class="folder">C:\Users\VideoRay\AppData\Local\VideoRay\AccessoryDevices\</span> folder.  The accessory device configuration file is an XML file with human readable file names.</p>
 
@@ -27,12 +27,12 @@
 <p>VideoRay Cockpit software allows you to monitor the status of all connected PAM devices in real time.</p>
 
 <ul>
-  <li><!--v--><a name = "maintenance" onmouseover = "viewt.src=diagh.src" onmouseout = "resett()"><!--/v--> First click the Maintenance and Diagnostic button on the launch bar in Cockpit.<!--v--><img src="../../required/images/icon_hand.gif"></a><!--/v--></li>
+  <li><!--v--><a name = "maintenance" onmouseover = "viewt.src=diagh.src" onmouseout = "resett()"><!--/v--> First click the Maintenance and Diagnostic button on the launch bar in Cockpit.<!--v--><img src="../../required/images/icon_hand.png"></a><!--/v--></li>
   </ul>
 
 <!--p--><p align = "center"><img src = "../../pam/images/diag_s1.png" width = "550" height = "400"></p><!--/p-->
 <ul>
-  <li><!--v--><a name "communications" onmouseover = "viewt.src=comms.src" onmouseout = "resett()"><!--/v-->Next, press the show communications diagnostic window button on the service bay screen, and the screen above will appear, allowing you to view data on your attached PAM devices.<!--v--><img src="../../required/images/icon_hand.gif"></a><!--/v--></li>
+  <li><!--v--><a name "communications" onmouseover = "viewt.src=comms.src" onmouseout = "resett()"><!--/v-->Next, press the show communications diagnostic window button on the service bay screen, and the screen above will appear, allowing you to view data on your attached PAM devices.<!--v--><img src="../../required/images/icon_hand.png"></a><!--/v--></li>
   </ul>
 
 <!--p--><p align = "center"><img src = "../../pam/images/diag_s2.png" width = "550" height = "400"></p><!--/p-->
